Fixed stacking order of bookmarks after edit (z-index flashed)

--- a/static/styles.css
+++ b/static/styles.css
@@ -8,7 +8,7 @@
 .navbar{
     position: sticky;
     top: 5px;
-    z-index: 2;
+    z-index: 10;
 }
 nav .navbar-brand
 {
@@ -19,7 +19,7 @@ nav .navbar-brand
 .flashed{
     position: sticky;
     top: 5em;
-    z-index: -1;
+    z-index: 10;
 }
 
 
